<resources>
    <string name="app_name">DriverProfile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="driver_name">Ram Mohan</string>
    <string name="driver_email">ram.mohan@uber.com</string>
    <string name="email_id">Email Id</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="driver_phoneNumber">9876543210</string>
    <string name="total_number_of_rides">Total Number Of Rides</string>
    <string name="driver_rides">78</string>
    <string name="total_fare">Total Fare</string>
    <string name="driver_fare">₹68,743.95</string>
    <string name="average_rating">Average Rating</string>
    <string name="driver_rating">3.75</string>
    <string name="driver_id">Driver Id</string>
    <string name="driver_account_id">Uber1245</string>
    <string name="spinner_prompt">Search By</string>
    <string name="search_text1"><![CDATA[    Please Select a Date or Month]]></string>
    <string name="search_text2">From Drop down Menu</string>
    <string name="data_hint">Test Data-Randomly Generated Values</string>
    <string-array name="searchBy">
        <item>Select an Option</item>
        <item >Search By Date</item>
        <item>Search By Month</item>
    </string-array>
</resources>
